--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -11,17 +11,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <main>
     <div class="card">
       <img src="images/image-qr-code.png" alt="qr-code" class="card__image">
       <h1 class="card__title">Improve your front-end skills by building projects</h1>
       <p class="card__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>    
-    
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">César Loo</a>.
-    </div>    
+  </main>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">César Loo</a>.
   </div>
 </body>
 </html>
